5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1723_2508.log
== TEST (2019-05-14 10:17:04) 
-- CODE:
n = int(input("Quantidade de termos: "))
c = 4
y = 0

while (c < n):
	y = 3 + 4/factorial(c) + y
	c = c + 2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = 3 + 4/factorial(c) + y
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:17:15) 
-- CODE:
n = int(input("Quantidade de termos: "))
c = 4
y = 0

while (c < n):
	y = 3 + 4/factorial(c) + y
	c = c + 2
	
print(y, 8)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = 3 + 4/factorial(c) + y
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:17:23) 
-- CODE:
n = int(input("Quantidade de termos: "))
c = 4
y = 0

while (c < n):
	y = 3 + 4/factorial(c) + y
	c = c + 2
	
print(round(y, 8))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = 3 + 4/factorial(c) + y
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:17:34) 
-- CODE:
n = int(input("Quantidade de termos: "))
c = 4
y = 0

while (c < n):
	y = 3 + 4/factorial(c) + y
	c = c + 2
	
print(round(y, 8))	

-- EXECUTION TIME:
0.24146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2508/main.py", line 6, in <module>
    y = 3 + 4/factorial(c) + y
NameError: name 'factorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:17:42) 
-- CODE:
n = int(input("Quantidade de termos: "))
c = 4
y = 0

while (c < n):
	y = 3 + 4/factorial(c) + y
	c = c + 2
	
print(round(y, 8))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = 3 + 4/factorial(c) + y
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:13) 
-- CODE:
n = int(input("Quantidade de termos: "))
i = 1
soma 3

while (n > i):
	tg = (2*i) * (2*i + 2) * (2*i + 2)
	soma = soma + (4* (-1)) ** (i + 1)/tg
	i = i + 1
	
print(round(soma, 8))	
-- ERROR:
File "XXXX", line 3
    soma 3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:18) 
-- CODE:
n = int(input("Quantidade de termos: "))
i = 1
soma = 3

while (n > i):
	tg = (2*i) * (2*i + 2) * (2*i + 2)
	soma = soma + (4* (-1)) ** (i + 1)/tg
	i = i + 1
	
print(round(soma, 8))	
-- OUTPUT:
2.44222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:56) 
-- CODE:
n = int(input("Quantidade de termos: "))
i = 1
soma = 3

while (n > i):
	tg = (2*i) * (2*i + 2) * (2*i + 2)
	soma = soma + (4 ** (-1)) ** (i + 1)/tg
	i = i + 1
	
print(round(soma, 8))	
-- OUTPUT:
3.00207303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:28:41) 
-- CODE:
n = int(input("Quantidade de termos: "))
i = 1
soma = 3

while (n > i):
	tg = (2*i) * (2*i + 1) * (2*i + 2)
	soma = soma + (4 ** (-1)) ** (i + 1)/tg
	i = i + 1
	
print(round(soma, 8))	
-- OUTPUT:
3.00274736
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:24) 
-- CODE:
n = int(input("Quantidade de termos: "))
i = 1
soma = 3

while (n > i):
	tg = (2*i) * (2*i + 1) * (2*i + 2)
	soma = soma + (4 * (-1) ** (i + 1))/tg
	i = i + 1
	
print(round(soma, 8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:29:27) 
-- CODE:
n = int(input("Quantidade de termos: "))
i = 1
soma = 3

while (n > i):
	tg = (2*i) * (2*i + 1) * (2*i + 2)
	soma = soma + (4 * (-1) ** (i + 1))/tg
	i = i + 1
	
print(round(soma, 8))	
-- EXECUTION TIME:
0.132218
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
